# my-whisper-api

./: .gitignore  README.md  database.py  frontend_agent.py  huey.db  huey.db-shm  huey.db-wal  main.py  pyproject.toml  tasks.db  tasks.py  whisper_api.py
jottings/: interview_concurrency.md  learn_langchain.md
results/: upload_a58b3030-d4b2-4a31-9a0a-3a9b3415126a.txt  upload_chunk_001.mp3_ccb2248b-acf9-4214-9cdd-fe4d1b193a00.txt  upload_chunk_003_7f6ed465.mp3_e9aa8a42-2fc1-4779-b6f3-f09474ea285c.txt
static/: voice_ui.html
